[package]
name = "cache-n"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A caching library for Rust functions using Redis."
authors = ["Neko Nik <nikhil@nekonik.com>"]
license = "MIT"
repository = "https://github.com/Neko-Nik/Cache-N"
homepage = "https://github.com/Neko-Nik/Cache-N"
documentation = "https://github.com/Neko-Nik/Cache-N"
keywords = ["caching", "redis", "rust", "cache-n", "cache"]

[dependencies]
redis = { version = "0.28.2", features = ["r2d2"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.11.6"
serde_json = "1.0"
r2d2 = "0.8.10"
log = "0.4"
